<resources>
    <string name="app_name">CryptoSzD</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="no_account_yet">Don\'t have an account yet?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="login_with_google">Login with Google</string>
    <string name="bad_email_format">The email address is badly formatted.</string>
    <string name="email_already_exists">The email address is already in use by another account.</string>
    <string name="invalid_password">The password is invalid, it must be at least 6 characters.</string>
    <string name="empty_email_error">Email cannot be empty!</string>
    <string name="empty_password_error">Password cannot be empty!</string>
    <string name="successful_registration">Successful registration!</string>
    <string name="create_a_new_account">Create a new account </string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_email">Confirm email</string>
    <string name="wrong_password">The password you entered is incorrect.</string>
    <string name="account_disabled">The user account has been disabled by an administrator.</string>
    <string name="user_doesnt_exist_or_deleted">There is no user with this email or the user may have been deleted.</string>
    <string name="network_error">A network error has occurred. Please check your connection.</string>
    <string name="empty_field">Field cannot be empty!</string>
    <string name="welcome_to_cryptoszd">Welcome %1$s to CryptoSzD</string>
    <string name="create_certificate">Create certificate</string>
    <string name="create">Create</string>
    <string name="country_code">Country code: </string>
    <string name="location">Location: </string>
    <string name="certificate_email">Email: </string>
    <string name="cn">CN (Common Name): </string>
    <string name="select_country">Select country and country code</string>
    <string name="please_select_a_country">Please select a country!</string>
    <string name="special_characters_warning">Special characters may cause trouble (ő, ű). Please try to avoid them.</string>
    <string name="locality">Locality:</string>
    <string name="country">Country:</string>
    <string name="common_name">Common Name:</string>
    <string name="password_vault_info">Enter a strong password. This password will be needed to open your vault. If you lose your password, your vault cannot be opened anymore.</string>
    <string name="enter_master_password">Enter master password to open your vault.</string>
    <string name="website_">Website: %1$s</string>
    <string name="website">Website</string>
    <string name="save_changes">Save changes</string>
    <string name="min_char_6">At least 6 characters</string>
    <string name="save_directory">Save directory</string>
    <string name="chosen_directory">Chosen directory: %1$s</string>
    <string name="permission_denied">Without write permission File encryption cannot work</string>
    <string name="confirm_password">Confirm password</string>
    <string name="file">"File: %1$s"</string>
    <string name="password_note">Give a password for encryption. Please note that this password will be needed for decryption.</string>
    <string name="invalid_certificate">This certificate is invalid!!</string>
    <string name="expired_certificate">This certificate expired!</string>
    <string name="valid_certificate">This certificate is valid!</string>
    <string name="renew_certificate">Renew certificate</string>
    <string name="something_went_wrong">Something went wrong! Check your connection.</string>
    <string name="too_many_failed_login_attempt">Too many failed login attempt, try again later</string>
    <string name="emails_dont_match">Emails don\'t match.</string>
    <string name="passwords_dont_match">Passwords don\'t match.</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="password_min_6">Password should be at least 6 characters</string>
    <string name="no_file_was_chosen">No file was chosen</string>
    <string name="something_went_wrong_only">Something went wrong</string>
    <string name="choose_a_file">Choose a file</string>
    <string name="success">Success</string>
    <string name="certificate_copied">Certificate copied to clipboard</string>
    <string name="select_country_code">Select country code</string>
    <string name="certificate_created">Certificate successfully created!</string>
    <string name="no_selected_certificate">There is no selected certificate</string>
    <string name="nothing_to_decrypt">There is nothing to decrypt</string>
    <string name="cancel">Cancel</string>
    <string name="password_min_10">Master password should be at least 10 characters</string>
    <string name="open">Open</string>
    <string name="add">Add</string>
    <string name="add_new_password">Add new password</string>
    <string name="save">Save</string>
    <string name="exit">Exit</string>
    <string name="check_or_change_password">Check or change password</string>
    <string name="chenges_saved">Changes saved</string>
    <string name="master_password">Master Password</string>
    <string name="confirm_master_password">Confirm Master Password</string>
    <string name="press_long_the_certificate_to_copy">Press long the certificate to copy</string>
    <string name="subject">Subject</string>
    <string name="common_name_double">Common name:</string>
    <string name="country_double">Country:</string>
    <string name="issuer">Issuer</string>
    <string name="organization_double">Organization:</string>
    <string name="other_information">Other information</string>
    <string name="public_key_double">Public key:</string>
    <string name="signature_algorithm_double">Signature algorithm:</string>
    <string name="signature_double">Signature:</string>
    <string name="valid_not_before_double">Valid not before:</string>
    <string name="valid_not_after_double">Valid not after:</string>
    <string name="serial_number_double">Serial number:</string>
    <string name="version_double">Version:</string>
    <string name="type_double">Type:</string>
    <string name="file_encryption">File encryption</string>
    <string name="encryption_mode">Encryption mode</string>
    <string name="directory">Directory</string>
    <string name="search">Search</string>
    <string name="certificate">Certificate</string>
    <string name="all_certificates">All certificates</string>
    <string name="password_vault">Password vault</string>
    <string name="encrypt_or_decrypt_file">Encrypt or Decrypt File</string>
    <string name="message_encryption">Message Encryption</string>
    <string name="logout">Logout</string>
    <string name="conversation_partner_s_certificate">Conversation partner\'s certificate:</string>
    <string name="paste_certificate">Paste certificate</string>
    <string name="search_certificate">Search certificate</string>
    <string name="unencrypted_text">Unencrypted text</string>
    <string name="encrypted_text">Encrypted text</string>
    <string name="message_decryption_failed">Message decryption failed</string>
    <string name="identical_error">This message was not sent by the owner of the selected certificate!</string>
    <string name="wrong_encrypted_text">Wrong encrypted text</string>
</resources>