<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/certificateLayout"
        android:padding="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/certificateTitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_certificate"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cnTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/cn"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/certificateTitleTV" />

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/certificateProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="1.25"
            android:scaleY="1.25"
            app:indicatorColor="@color/crypto_yellow"
            app:indicatorName="BallRotateIndicator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cnTV"
            app:layout_constraintTop_toBottomOf="@+id/certificateTitleTV" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cnTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cnTV">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cnTIET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/emailTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/certificate_email"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cnTIL" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/certificateEmailTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailTV">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/certificateEmailTIET"
                android:layout_width="match_parent"
                android:inputType="none"
                android:clickable="false"
                android:backgroundTint="@color/browser_actions_divider_color"
                android:backgroundTintMode="add"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/locationTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/certificateEmailTIL" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/locationTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationTV">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/locationTIET"
                android:inputType="textNoSuggestions"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/countryCodeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_code"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationTIL" />


        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/countryCodeSS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintText="@string/select_country"
            android:layout_marginVertical="20dp"

            app:layout_constraintTop_toBottomOf="@+id/countryCodeTV" />

        <TextView
            android:id="@+id/ssErrorTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_select_a_country"
            android:textColor="@color/red"
            app:layout_constraintBottom_toTopOf="@+id/countryCodeSS"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/countryCodeTV"
            app:layout_constraintTop_toBottomOf="@+id/countryCodeTV" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/certificateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/countryCodeSS" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/special_characters_warning"
            app:layout_constraintStart_toStartOf="@+id/certificateButton"
            app:layout_constraintTop_toBottomOf="@+id/certificateButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>