<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/dialog_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/createVaultLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:indicatorColor="@color/crypto_yellow"
        app:indicatorName="BallRotateIndicator"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/passwordvault"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/passwordVaultOpenTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_vault_info"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/masterPasswordTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/master_password"
        app:endIconMode="password_toggle"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordVaultOpenTV"
        tools:layout_editor_absoluteX="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/masterPasswordTIET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword|textNoSuggestions"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmMasterPasswordTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/confirm_master_password"
        app:endIconMode="password_toggle"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/masterPasswordTIL"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmMasterPasswordTIET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword|textNoSuggestions"
            />

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>